# svelte-tauri-filedrop

./: .gitignore  .npmignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: test.yml
src/: hooks.js  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/lib/: FileDrop.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte  __layout.svelte  index.svelte  main.svelte  overlay.svelte
src/routes/overlay/: +page.svelte
