[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
default-run = "app"
edition = "2021"
rust-version = "1.56"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
tauri = { version = "2.0.0-beta.19", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
